# OpenSMOKEppInterface

./: .gitignore  CMakeLists.txt  PreCompiledPackageGen.sh  README.md  notes
cmake/: FindCONFIG++.cmake  FindOpenBLAS.cmake
etc/: compile.clusterz3
kinetics/: preprocess-kinetics.sh
kinetics/LiquidProperties/LiquidProperties/: speciesSettings.cfg
kinetics/LiquidProperties/LiquidPropertiesCH3OH/: speciesSettings.cfg  speciesSettings.revised.furans.cfg
kinetics/LiquidProperties/LiquidPropertiesFPBO/: speciesSettings.cfg
kinetics/SolidKinetics/: BIO_2003.gas
kinetics/SolidKinetics/kinetics_compiled/: Kinetics_Summary.out  Thermodynamics_Coefficients.out  kinetics.CHEMKIN.CKI  kinetics.solid.xml  kinetics.xml  reaction_names.xml
kinetics/biomass-kinetics/: BIO_2003.gas
kinetics/biomass-kinetics/kinetics/: Kinetics_Summary.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI
kinetics/biomass/PE/: dummy.CKT  dummy.TRAN  dummy.gas  dummy.solid  input.preprocessing.dic
kinetics/biomass/PE/kinetics/: Kinetics_Summary.out  SolidSummary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI  kinetics.solid.xml  kinetics.xml
kinetics/biomass/POM/: dummy.CKT  dummy.TRAN  dummy.gas  dummy.solid
kinetics/biomass/POM/kinetics/: Kinetics_Summary.out  SolidSummary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI  kinetics.solid.xml  kinetics.xml
kinetics/biomass/Red-gas-2507/: input.dic  kinetics.CKI  kinetics.solid  thermo.CHEMKIN.CKT  tran.CHEMKIN.TRAN
kinetics/biomass/Red-gas-2507/kinetics/: Kinetics_Summary.out  SolidSummary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI  kinetics.solid.xml  kinetics.xml  reaction_names.xml
kinetics/biomass/Solid-20/: kinetics.gas  kinetics.solid
kinetics/biomass/Solid-20/kinetics/: Kinetics_Summary.out  SolidSummary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI  kinetics.solid.xml  kinetics.xml
kinetics/biomass/Solid-30/: kinetics.gas  kinetics.solid
kinetics/biomass/Solid-30/kinetics/: Kinetics_Summary.out  SolidSummary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI  kinetics.solid.xml  kinetics.xml
kinetics/biomass/Solid-gas-2507/: kinetics.gas  kinetics.solid  thermo.tdc
kinetics/biomass/Solid-gas-88/: input.dic  kinetics.gas  kinetics.solid  thermo.tdc
kinetics/biomass/Solid-only-1402/: input.dic  kinetics.gas  kinetics.solid  thermo.tdc  transport.tra
kinetics/biomass/Solid-only-2003/: input.dic
kinetics/biomass/Solid-only-2407/: input.dic  kinetics.gas  kinetics.solid
kinetics/biomass/Solid-only-2507/: kinetics.solid  thermo.tdc
kinetics/biomass/dummy-solid/: dummy.CKT  dummy.TRAN  dummy.gas  dummy.solid
kinetics/biomass/dummy-solid-gas/: dummy.CKT  dummy.TRAN  dummy.gas  dummy.solid
kinetics/common/: thermo.enriched-old.CKT  thermo.enriched.CKT  transport.enriched-old.TRC  transport.enriched.TRC
kinetics/evaporation/acetic-acid/: CH3CO2H_40.CKI  CH3CO2H_40.liquid.CKI  TOT1905.therm
kinetics/evaporation/acetic-acid-in-nitrogen/: CH3CO2H_40.CKI  TOT1905.TRAN  input.dic
kinetics/evaporation/ethanol-in-air/: CH3OH_22.CKI  CRECK_2003_C1_C3_HT.CKT  CRECK_2003_C1_C3_HT.TRC  input.dic  liquid.CKI
kinetics/evaporation/methanol-in-air/: CH3OH_22.CKI  CRECK_2003_C1_C3_HT.CKT  CRECK_2003_C1_C3_HT.TRC  liquid.CKI
kinetics/evaporation/n-decane-in-air/: gas.CKI
kinetics/evaporation/n-decane-in-nitrogen/: gas.CKI  liquid.CKI
kinetics/evaporation/n-heptane-decane-in-nitrogen/: gas.CKI  liquid.CKI
kinetics/evaporation/n-heptane-dodecane-in-nitrogen/: gas.CKI  liquid.CKI
kinetics/evaporation/n-heptane-hexadecane-in-nitrogen/: gas.CKI  liquid.CKI
kinetics/evaporation/n-heptane-in-air/: gas.CKI
kinetics/evaporation/n-heptane-in-nitrogen/: gas.CKI  input.dic  liquid.CKI
kinetics/evaporation/n-heptane-n-dodecane-in-air/: gas.CKI
kinetics/evaporation/n-hexadecane-in-air/: gas.CKI
kinetics/evaporation/n-hexadecane-in-nitrogen/: gas.CKI  liquid.CKI
kinetics/kinetics-evaporation/: kinetics.liquid.xml  kinetics.xml
kinetics/kinetics-singlestep/: Kinetics_Summary.out  LiquidSummary.out  kinetics.liquid.xml  kinetics.xml
kinetics/materials/n-heptane/: gas.CKI
kinetics/materials/water/: gas.CKI  liquid.CKI
kinetics/one-step/n-heptane/: gas.n-heptane-combustion.CKI  input.dic
kinetics/skeletal/ch3oh/: CH3OH_22.CKI  input.dic
kinetics/skeletal/methanol/: TOT1905.TRAN  TOT1905.therm
kinetics/skeletal/methanol-water/: CH3OH.CKI  TOT1905.TRAN  TOT1905.therm  input.dic  multicomponent-input-meoh.h
kinetics/surface/char/: gas.CKI  surface.CKI  thermo-surface.CKT
kinetics/surface/charwd/: gas.CKI  input.dic
kinetics/two-step/ethanol/: liquid.methanol-noreactions.CKI
kinetics/two-step/ethanol-water/: gas.methanol-combustion.CKI  liquid.methanol-noreactions.CKI
kinetics/two-step/methanol/: gas.methanol-combustion.CKI  input.dic  liquid.methanol-noreactions.CKI
kinetics/two-step/methanol-water/: liquid.methanol-noreactions.CKI
kinetics/two-step/n-heptane/: gas.n-heptane-combustion.CKI  input.dic  liquid.n-heptane-noreactions.CKI
kinetics/two-step/n-nonane/: gas.n-nonane-combustion.CKI  input.dic  liquid.n-nonane-noreactions.CKI
python/: opensmoke_python_interface.py
python_interface/: __init__.py  pyopensmoke.py
src/: OpenSMOKE_Interface.cpp  OpenSMOKE_Interface.h  OpenSMOKE_ODESystem_Interface.h  a.out  compile.sh  main.py  richardson.c  test-odeinterface.c
src/kinetics/: kinetics.CHEMKIN.CKI
src/kinetics-singlestep/: reaction_names.xml
test/: .test-odeinterface.c.swp  compile.sh  d2law.c  main.c  main.py  pathak.c  richardson.c
test/kinetics/: kinetics.xml
tests/: CMakeTests.cmake  OpenSMOKE_GasKinetics.cpp  OpenSMOKE_GasKinetics.ref  OpenSMOKE_ODESolver.cpp  OpenSMOKE_ODESolver.ref  OpenSMOKE_PythonInterface.py  OpenSMOKE_PythonInterfaceSolid.py  OpenSMOKE_SolidKinetics.cpp  OpenSMOKE_SolidKinetics.ref  OpenSMOKE_SurfaceKinetics.cpp  OpenSMOKE_SurfaceKinetics.ref
(+277 files in other folders)
